// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferMenu reducer tests returns initial state 1`] = `
Immutable.Map {
  "transferSearchInput": "",
  "transferTabIndex": 0,
  "focusedTransferItemIndex": -1,
  "showTransferDialpad": false,
  "userAssignedTransferLists": Immutable.Map {
    "voiceListsLoadingState": true,
    "nonVoiceListsLoadingState": true,
  },
}
`;

exports[`TransferMenu reducer tests sets agentsListVisibleState 1`] = `
Immutable.Map {
  "agentsListVisibleState": true,
}
`;

exports[`TransferMenu reducer tests sets focusedTransferItemIndex 1`] = `
Immutable.Map {
  "focusedTransferItemIndex": 0,
}
`;

exports[`TransferMenu reducer tests sets queuesListVisibleState 1`] = `
Immutable.Map {
  "queuesListVisibleState": true,
}
`;

exports[`TransferMenu reducer tests sets transferSearchInput 1`] = `
Immutable.Map {
  "transferSearchInput": "mockTransferSearchInput",
}
`;

exports[`TransferMenu reducer tests sets transferTabIndex 1`] = `
Immutable.Map {
  "transferTabIndex": 1,
}
`;

exports[`TransferMenu reducer tests sets userAssigned non-voice interaction TransferLists 1`] = `
Immutable.Map {
  "userAssignedTransferLists": Immutable.Map {
    "nonVoiceListsLoadingState": false,
    "onlyQueueTransferLists": Immutable.List [
      Immutable.Map {
        "mockTransferListKey": "mockTransferListValue",
      },
    ],
  },
}
`;

exports[`TransferMenu reducer tests sets userAssigned non-voice interaction TransferLists LoadingState 1`] = `
Immutable.Map {
  "userAssignedTransferLists": Immutable.Map {
    "nonVoiceListsLoadingState": true,
  },
}
`;

exports[`TransferMenu reducer tests sets userAssigned voice interaction TransferLists 1`] = `
Immutable.Map {
  "userAssignedTransferLists": Immutable.Map {
    "voiceListsLoadingState": false,
    "pstnSipQueueTransferLists": Immutable.List [
      Immutable.Map {
        "mockTransferListKey": "mockTransferListValue",
      },
    ],
  },
}
`;

exports[`TransferMenu reducer tests sets userAssigned voice interaction TransferLists LoadingState 1`] = `
Immutable.Map {
  "userAssignedTransferLists": Immutable.Map {
    "voiceListsLoadingState": true,
  },
}
`;

exports[`TransferMenu reducer tests sets userAssignedTransferListsVisibleState 1`] = `
Immutable.Map {
  "userAssignedTransferLists": Immutable.Map {
    "transferListsVisibleState": Immutable.Map {
      "assignedTransferList-abc": true,
    },
  },
}
`;

exports[`TransferMenu reducer tests sets visibleStateOfAllUserAssignedTransferLists 1`] = `
Immutable.Map {
  "userAssignedTransferLists": Immutable.Map {
    "allTransferListsVisibleState": true,
  },
}
`;

exports[`TransferMenu reducer tests updates showTransferDialpad state 1`] = `
Immutable.Map {
  "showTransferDialpad": true,
}
`;
